# tokenize_all_code

./: README.md  pyproject.toml
src/: tokenize_all.py
