
[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenize_all_code"
version = "1.0.18"
description = "Tokenize code snippets."
readme = "README.md"
authors = [{ name = "chand1012" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/CasualCodersProjects/tokenize_all_code"
